# agentic-pymol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
pymol_plugin/: __init__.py  auth.py  framing.py  handlers.py  plugin.ui  serialize.py  server.py
src/agentic_pymol/: __init__.py  app.py  auth.py  client.py  errors.py  responses.py  server.py  types.py
src/agentic_pymol/tools/: __init__.py  align.py  data.py  io.py  query.py  session.py
tests/: conftest.py  test_auth.py  test_dispatch.py  test_interrupt.py  test_port_discovery.py  test_serialization.py  test_tools.py
